# cyber-forum

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  SSH_INSTRUCTIONS.md  TODO.md  install.sh  render.yaml
.github/workflows/: release.yml
scripts/: seed_via_api.py
server/: Cargo.toml  Dockerfile  test.sh
server/migrations/: 20231215000000_initial.sql
server/src/: main.rs  seed.rs  ssh_server.rs  terminal_server.rs  test_utils.rs
src/: api.rs  app.rs  main.rs
