[package]
name = "ternimal"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
base64 = "0.21"

