[package]
name = "forum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2.0"
actix-test = "0.1.0"

[workspace]
resolver = "2"
